# dotnetlink

./: .gitignore  Build.ps1  Dockerfile  LICENSE  README.md
C#/dotnetlink/: IPAddress4.cs  NetlinkSocket.cs  NetworkInterface.cs  RTProt.cs  Route4.cs
C#/dotnetlinkps/: Route4.cs  SingletonRepository.cs  dotnetlinkps.csproj
C++/: Test.cpp  Test.hpp
C++/src/: AddIPAddress4.cpp  AddRoute4.cpp  GetIPAddress4.cpp  GetNetworkInterface.cpp  (+11 more)
Connector/: CMakeLists.txt  Test.cpp
Connector/src/: GetIPAddress4.cpp  GetNetworkInterface.cpp  GetRoute4.cpp  Netlink.hpp  NetlinkSocket.cpp  RemoveIPAddress4.cpp  RemoveRoute4.cpp  SetNetworkInterface.cpp  SocketOperations.hpp  TLVOperations.hpp
Connector/src/Addresses/: AddIPAddress4.cpp  GetIPAddress4.cpp  RemoveIPAddress4.cpp
Connector/src/Interfaces/: AddInterface.cpp  GetNetworkInterface.cpp  RemoveInterface.cpp  SetNetworkInterface.cpp
Connector/src/Routes/: AddRoute4.cpp  GetRoute4.cpp  RemoveRoute4.cpp
Connector/src/Socket/: NetlinkSocket.cpp  SocketOperations.cpp  TLVOperations.cpp  TLVOperations.hpp
Connector/src/dotnetfilter/: AddNewRule.cpp  DeleteRule.cpp  RequestAllRules.cpp
Connector/src/dotnetlink/: AddIPAddress4.cpp  AddInterface.cpp  AddRoute4.cpp  GetIPAddress4.cpp  GetNetworkInterface.cpp  GetRoute4.cpp  RemoveIPAddress4.cpp  RemoveInterface.cpp  RemoveRoute4.cpp  SetNetworkInterface.cpp
Interface/: dotnetlink.sln
KernelModule/: CMakeLists.txt  Communication.c  Communication.h  FilterTable.c  FilterTable.h  Filtering.c  Filtering.h  Hooks.c  Hooks.h  Makefile  Module.c
src/: dotnetlink.sln
(+139 files in other folders)
